030-software/fluxcd/apps/libreddit/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: libreddit
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: libreddit
